# Agora

./: .gitignore  Justfile  README.md
agora/agora/: A2AClient.swift  A2AModels.swift  AgentCardView.swift  ContentView.swift  ConversationVM.swift  ConversationView.swift  GlassInputBar.swift  Item.swift  KeyValueListEditor.swift  MainView.swift  MarkdownText.swift  MultilineMessageInput.swift  ResultBlocksView.swift  SSEClient.swift  SettingsView.swift  SkillAutocompleteView.swift  SkillSlashCommand.swift  TaskSidebarView.swift  WorkspaceModels.swift  WorkspaceStore.swift  agoraApp.swift
agora/agora.xcodeproj/: project.pbxproj
agora/agora.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
docs/: exploration-notes.md
openspec/changes/archive/2026-06-13-a2a-client-mvp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-13-a2a-client-mvp/specs/conversation-ui/: spec.md
openspec/changes/part-mapping/: design.md  proposal.md  tasks.md
openspec/changes/part-mapping/specs/a2a-streaming/: spec.md
openspec/changes/part-mapping/specs/conversation-ui/: spec.md
openspec/changes/part-mapping/specs/part-mapping/: spec.md
openspec/specs/a2a-streaming/: spec.md
python/: pyproject.toml
python/a2a_demo/: __init__.py  __main__.py  agent_executor.py  mock_flow.py  server.py
rust/: Cargo.toml
rust/agora-a2a/: Cargo.toml  uniffi.toml
rust/agora-a2a/src/: lib.rs
rust/agora-a2a/tests/: interop.rs
