[package]
name = "agora-a2a"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UniFFI bridge wrapping a2a-client for the Agora Swift app"

[lib]
crate-type = ["staticlib", "lib"]
name = "agora_a2a"

[dependencies]
a2a = { package = "a2a-lf", version = "=0.3.0" }
a2a-client = { package = "a2a-client-lf", version = "=0.2.0" }
async-trait = "0.1"
futures = "0.3"
once_cell = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uniffi = "=0.31.1"
url = "2"
